<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hercule 2000</string>
    <string name="action_settings">Settings</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_connexion">Connexion</string>
    <string name="hello_world">Hello world!</string>
    <string name="adresse_ip">Adresse IP</string>
    <string name="ip_default">192.168.0.100</string>
    <string name="port">Port</string>
    <string name="port_default">9999</string>
    <string name="connexion">Connexion</string>
    <string name="envoyer">Envoyer</string>
    <string name="commande_manuelle">Commande manuelle</string>
    <string name="commande_gyroscope">Test Gyroscope</string>
    <string name="commande_acceleration">Test Acceleration</string>
    <string name="base">BASE</string>
    <string name="epaule">EPAULE</string>
    <string name="coude">COUDE</string>
    <string name="tangage">TANGAGE</string>
    <string name="roulis">ROULIS</string>
    <string name="pince">PINCE</string>
    <string name="pince_serrer">PINCE_SERRER</string>
    <string name="pince_relacher">PINCE_RELACHER</string>
    <string name="vitesse">Vitesse</string>
    <string name="plus">+</string>
    <string name="moin">-</string>
    <string name="quitter">Quitter</string>
    <string name="activer">Activer</string>
    <string name="dialog_titre_wifi_desactiver">Wi-Fi désactivé</string>
    <string name="dialog_message_wifi_activer">Activer le Wi-Fi ?</string>
    <string name="connexion_reseau">Connexion Reseau</string>
    <string name="title_activity_commande_manuelle">CommandeManuelle</string>
    <string name="serrer">Serrer</string>
    <string name="relacher">Relâcher</string>
    <string name="title_activity_gyroscope_commande">GyroscopeCommande</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="spinner_prompt">Choose a sensor</string>
    <string name="magnetic_value">The gyroscope value (R/s) is\r\n(%1$s,\r\n%2$s,\r\n%3$s)\r\n </string>
    <string name="title_activity_accelerometre_commande">AccelerometreCommande</string>
    <string name="title_activity_telecommande">Télécommande</string>
    <string name="couple">Couple</string>
    <string name="title_activity_accelerometre">Accelerometre</string>
    <string name="reset">Reset</string>
    <string name="password">Mot de passe</string>
    <string name="capturer_mouvements">Capturer</string>
    <string name="lancer_capture">Lancer</string>
    <string name="title_activity_main">MainActivity</string>

</resources>