<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txw_ip_connexion_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresse_ip" />

    <EditText
        android:id="@+id/edt_ip_connexion_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/ip_default" />

    <TextView
        android:id="@+id/txw_port_connexion_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <EditText
        android:id="@+id/edt_port_connexion_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/port_default" />
		
</LinearLayout>