<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Accueil" >

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/commande_manuelle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/description"
        android:text="@string/commande_manuelle" />

    <Button
        android:id="@+id/commande_gyroscope"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/commande_manuelle"
        android:layout_below="@+id/commande_manuelle"
        android:layout_marginTop="14dp"
        android:text="@string/commande_gyroscope" />

    <Button
        android:id="@+id/commande_acceleration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/commande_manuelle"
        android:layout_below="@+id/commande_manuelle"
        android:layout_marginTop="84dp"
        android:text="@string/commande_acceleration" />

</RelativeLayout>