<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Accelerometre" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/xTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/yTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/zTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin" >

        <TextView
            android:id="@+id/txv_vitesse_commande_manuelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/vitesse" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBarVitesse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:max="29"
        android:tag="VITESSE" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <Button
                android:id="@+id/baseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/MyButton"
                android:tag="@string/base"
                android:text="@string/base" />

            <Button
                android:id="@+id/roulisButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/MyButton"
                android:tag="@string/roulis"
                android:text="@string/roulis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/epauleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/MyButton"
                android:tag="@string/epaule"
                android:text="@string/epaule" />

            <Button
                android:id="@+id/coudeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/MyButton"
                android:tag="@string/coude"
                android:text="@string/coude" />

            <Button
                android:id="@+id/tangageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@color/MyButton"
                android:tag="@string/tangage"
                android:text="@string/tangage" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reperAccelerometreLayaout"
            android:layout_width="@dimen/reper_acclerometre_width"
            android:layout_height="@dimen/reper_acclerometre_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/pince"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SerrerPince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/MyButton"
            android:tag="@string/pince_serrer"
            android:text="@string/serrer" />

        <Button
            android:id="@+id/RelacherPince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/MyButton"
            android:tag="@string/pince_relacher"
            android:text="@string/relacher" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin" >

        <TextView
            android:id="@+id/coupleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/pince" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/coupleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:max="510"
            android:tag="COUPLE" />
    </RelativeLayout>

</LinearLayout>