<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GyroscopeCommande" >

    <TextView
        android:id="@+id/aX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aY"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="35dp"
        android:text="@string/x" />

    <TextView
        android:id="@+id/aZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aY"
        android:layout_below="@+id/aX"
        android:layout_marginTop="20dp"
        android:text="@string/z" />

    <TextView
        android:id="@+id/aY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aX"
        android:layout_alignParentTop="true"
        android:layout_marginTop="89dp"
        android:text="@string/y" />

</RelativeLayout>